syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "SpiderService";

package spider;

// The greeting service definition.
service SpiderWorkerProtoService {

  rpc Crawl (RequestModel) returns (google.protobuf.StringValue);
  rpc Ping (google.protobuf.Empty) returns (google.protobuf.StringValue);

  rpc AddTask(TaskProtoEditDto) returns (google.protobuf.Int32Value);
  rpc UpdateTask(TaskProtoEditDto) returns (google.protobuf.Empty);
  rpc GetTaskList(google.protobuf.Empty) returns (TaskListResult);
  rpc SetTaskStatus(TaskProtoEditDto) returns (google.protobuf.StringValue);
  rpc BulkUpdateTaskStatus(TaskProtoBulkEditDto) returns (google.protobuf.Empty);
  rpc GetTaskHistoryList(google.protobuf.Empty) returns(TaskProtoSimpleListResult);
  rpc RemoveTask(google.protobuf.Int32Value) returns (google.protobuf.Empty);
  rpc StopTask(google.protobuf.Int32Value) returns (google.protobuf.Empty);
  rpc StopAllTask(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc SubmitSpider(SpiderProtoEditDto) returns(google.protobuf.StringValue);
  rpc DeleteSpider(SpiderProtoEditDto) returns(google.protobuf.StringValue);
  rpc GetSpider(google.protobuf.Int32Value) returns(SpiderProtoDetailViewModel);
  rpc SetLinkedSpider(SpiderProtoDetailViewModel) returns (google.protobuf.Empty);
  rpc GetSpiderList(google.protobuf.Empty) returns(SpiderListResult);

  rpc SubmitTemplateConfig(TemplateProtoDto) returns(google.protobuf.StringValue);
  rpc DeleteTemplateConfig(TemplateProtoDto) returns(google.protobuf.StringValue);
  rpc GetTemplateConfigList(google.protobuf.Empty) returns (TemplateListResult);
}

message RequestModel {
  string url = 1;
  int32 spiderId = 2;
}

// *********** Task ***********
message TaskProtoViewModel{
	google.protobuf.StringValue rootUrl = 1;
	int32 spiderId = 2;
	int32 status = 3;
	google.protobuf.StringValue description = 4;
	int32 id = 5;
}

message TaskProtoEditDto{
	google.protobuf.StringValue rootUrl = 1;
	int32 spiderId = 2;
	int32 status = 3;
	google.protobuf.StringValue description = 4;
	int32 id = 5;
}

message TaskListResult {
	repeated TaskProtoViewModel list = 1;
}

message TaskProtoSimpleViewModel {
	int32 id = 1;
	google.protobuf.StringValue rootUrl = 2;
	int32 spiderId = 3;
}

message TaskProtoSimpleListResult {
	repeated TaskProtoSimpleViewModel list = 1;
}

message TaskProtoBulkEditDto {
	repeated int32 tasks = 1;
	int32 taskStatus = 2;
}
// *********** Task ***********

// *********** Spider ***********

message SpiderProtoEditDto {
	int32 id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue method = 4;
	google.protobuf.StringValue postObjStr = 5;
	google.protobuf.StringValue headers = 6;
	int32 nextPageId = 7;
	repeated int32 templates = 8;
}

message SpiderProtoDetailViewModel {
	int32 id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue method = 4;
	google.protobuf.StringValue postObjStr = 5;
	google.protobuf.StringValue headers = 6;
	int32 nextPageId = 7;
	repeated int32 templates = 8;
	TemplateProtoDto nextPage = 9;
	repeated TemplateProtoDto templateList = 10;
}

message SpiderProtoListItemViewModel {
	int32 id = 1;
	google.protobuf.StringValue name = 2;
}

message SpiderListResult {
	repeated SpiderProtoListItemViewModel list = 1;
}

// *********** Spider ***********

// *********** Template ***********

message TemplateProtoDto {
	int32 id = 1;
	google.protobuf.StringValue name = 2;
	int32 type = 3;
	google.protobuf.StringValue xPath = 4;
	int32 linkedSpiderId = 5;
	repeated TextReplacementRuleProtoDto rules = 6;
}

message TemplateListResult {
	repeated TemplateProtoDto list = 1;
}

message TextReplacementRuleProtoDto {
	int32 id = 1;
	google.protobuf.StringValue oldStr = 2;
	google.protobuf.StringValue newStr = 3;
}

// *********** Template ***********